Attempted adding meta info, and fixed typos

--- a/_posts/2020-09-26-go-part-2.md
+++ b/_posts/2020-09-26-go-part-2.md
@@ -6,7 +6,7 @@ color: primary
 description: Part 2 of my experience with learning and using GoLang, the general purpose programming language by Google.
 ---
 
-I will proceed by programatically explaining constructs in conjunction with code snippets.
+I will proceed by programmatically explaining constructs in conjunction with code snippets.
 Treat the code sections below as multiple mini demos combined together and explained with the help of comments.
 Code sections lower down the post will call functions declared higher up, so you can scroll back up and reference
 them.
@@ -14,7 +14,7 @@ them.
 ## The basics
 
 Programs start execution from within package `main`, with the `main` function inside that package being executed first.
-Packages are self contained, with the only things from the package accessible outside the package are exported names
+Packages are self contained, with the only things from the package accessible outside the it are exported names
 (variables, functions, etc. starting with an uppercase letter). Packages can contain sub-packages, via nested directories. 
 
 ``` go
@@ -41,8 +41,8 @@ func main() {
 
 ## Functions
 
-Unline most other languages, type declaration in Go occurs after the literal. Similar to how you can declare multiple variables
-of a type in c, like `int x, y;`, you can declare mutiple variables and mention the type after each variable, or only once at the end. This applies to function parameters too. Functions can also return multiple variables.
+Unlike most other languages, type declaration in Go occurs after the literal. Similar to how you can declare multiple variables
+of a type in c, like `int x, y;`, you can declare multiple variables and mention the type after each variable, or only once at the end. This applies to function parameters too. Functions can also return multiple variables.
 
 ```go
 func add(x, y int) int { // can also be add(x int, y int)
