Added Go Part 3 blog post

--- a/_posts/2020-09-26-go-part-2.md
+++ b/_posts/2020-09-26-go-part-2.md
@@ -306,6 +306,8 @@ func deferStackExample() {
 // Prints 9, 8, 7, ...
 ```
 
+[Continued in Part 3](/blog/go-part-3)
+
 [Here's all the stuff I made while learning from the Go docs](https://github.com/GokulVSD/ScratchPad/tree/master/Go)
 
 
