Added Go Part 4, and fixed a bunch of errors in previous posts

--- a/_posts/2020-09-26-go-part-2.md
+++ b/_posts/2020-09-26-go-part-2.md
@@ -3,7 +3,7 @@ title: "Go: Part 2"
 tags: [Go, Language, Dev Logs]
 style: border
 color: primary
-description: Part 2 of my experience with learning and using GoLang, the general purpose programming language by Google.
+description: Part 2 talks about the basics of the language, including the programming paradigms used.
 ---
 
 I will proceed by programmatically explaining constructs in conjunction with code snippets.
@@ -237,7 +237,7 @@ func pow(x, n, lim float64) float64 {
 	// short is similar to init in for loops.
 	if v := math.Pow(x, n); v < lim { 
 		return v
-	} else {
+	} else {	// Go is strict about where the curly braces are, else must come after the closing curly brace, and not on the next line
 		fmt.Println(v) 
 		// shorts and inits are only within scope of the block 
 		// (including the else blocks) of the flow construct
