--- a/_posts/2020-10-07-go-part-3.md
+++ b/_posts/2020-10-07-go-part-3.md
@@ -3,7 +3,7 @@ title: "Go: Part 3"
 tags: [Go, Language, Dev Logs]
 style: border
 color: primary
-description: Part 3 of my experience with learning and using GoLang, the general purpose programming language by Google.
+description: Part 3 includes Pointers, Struct, Arrays, Slices, Maps, and advanced usage of Functions.
 ---
 
 ## Pointers
@@ -33,9 +33,9 @@ func pointerTest() {
 However, unlike C, Go has no pointer arithmetic.
 
 ```go
-	p = p + 1
-	q := &i
-	p = p + q // All these fail
+p = p + 1
+q := &i
+p = p + q // All these fail
 }
 ```
 
@@ -110,14 +110,14 @@ func sliceTest() {
 ```
 
 When slicing, you may omit the high or low bounds to use their defaults instead. The default is zero for the low bound and the length of the slice for the high bound. The following are all the same for creating a slice of an array a which has a length of 10:
-```
+```go
 a[0:10]
 a[:10]
 a[0:]
 a[:]
 ```
 
-A slice does not store any data, it just describes a section of an underlying array. Changing the elements of a slice modifies the corresponding elements of its underlying array. Other slices that share the same underlying array will see those changes.
+A slice does not store any data, it just describes a section of an underlying array. Changing the elements of a slice modifies the corresponding elements of its underlying array. Other slices that share the same underlying array will see those changes. When a slice is used as a parameter in a function, an array or a slice can be used as an argument to that function, and it will be treated as call by reference.
 
 ```go
 names := [3]string{
@@ -346,7 +346,7 @@ func adder() func(int) int {
 func funcClosureTest() {
 	pos, neg := adder(), adder()
 	for i := 1; i < 4; i++ {
-		fmt.Println(pos(i), neg(-i)
+		fmt.Println(pos(i), neg(-i))
 	} 
 	// prints 1 -1
 	// 		  3 -3
