Fixed date and tags

--- a/_posts/2020-10-17-go-part-4.md
+++ b/_posts/2020-10-17-go-part-4.md
@@ -3,7 +3,7 @@ title: "Go: Part 4"
 tags: [Go, Language, Dev Logs]
 style: border
 color: primary
-description: Part 4 goes in-depth into Methods and Interfaces.
+description: Part 4 goes in depth into Methods and Interfaces, along with some of their applications.
 ---
 
 ## Methods
