Added new certificate, finished a WIP posst

--- a/_posts/2020-09-26-go-part-2.md
+++ b/_posts/2020-09-26-go-part-2.md
@@ -1,6 +1,6 @@
 ---
 title: "Go: Part 2"
-tags: [Go, Language, Dev Logs]
+tags: [Go, Language]
 style: border
 color: primary
 description: Part 2 talks about the basics of the language, including the programming paradigms used.
