--- a/_posts/2020-10-07-go-part-3.md
+++ b/_posts/2020-10-07-go-part-3.md
@@ -1,6 +1,6 @@
 ---
 title: "Go: Part 3"
-tags: [Go, Language, Dev Logs]
+tags: [Go, Language]
 style: border
 color: primary
 description: Part 3 includes Pointers, Struct, Arrays, Slices, Maps, and advanced usage of Functions.
