--- a/_posts/2020-10-22-go-part-5.md
+++ b/_posts/2020-10-22-go-part-5.md
@@ -1,6 +1,6 @@
 ---
 title: "Go: Part 5"
-tags: [Go, Language, Dev Logs]
+tags: [Go, Language]
 style: border
 color: primary
 description: The final part gives you a brief overview of common concurrency paradigms.
