Synchronized website to resume

--- a/_projects/2. MonoDAC.md
+++ b/_projects/2. MonoDAC.md
@@ -3,6 +3,6 @@ name: MonoDAC
 type: github
 tools: [Deep Learning, Computer Vision, Depth Estimation, DeepLabv3+, 3D Point Cloud, IPcamera]
 image: /assets/monodac.jpg
-description: Monocular Depth Estimation via a Fully Convolutional Deep Neural Network, utilising Atrous Convolutions, with 3D Point Cloud Visualisation.
+description: A monocular depth estimation system using a modified DeepLabv3+ encoder decoder, employing Atrous Convolutions and ASPP, along with a web platform for real-time wireless image capture, depth inference and 3D point cloud visualization.
 external_url: https://www.github.com/GokulVSD/monodac
 ---
