Migrate Resume to LaTeX

--- a/_projects/3. Wuasta.md
+++ b/_projects/3. Wuasta.md
@@ -3,6 +3,6 @@ name: Wuasta
 type: github
 tools: [Smart Alarm, Traffic, Android, UI, Distance Matrix API, Place Picker API]
 image: /assets/wuasta.jpg
-description: A predictive alarm app that pragmatically rings at the right time, taking into account real-time traffic conditions and historical data. Utilizes Distance Matrix APIs to find the ideal departure time to arrive at another location at a predefined time.
+description: A predictive alarm Android app built in Kotlin that pragmatically rings at the right time, taking into account real-time traffic conditions and historical data to find when to depart in order to arrive at another location at a predefined time
 external_url: https://www.github.com/GokulVSD/wuasta
 ---
