--- a/_projects/8. MidLLaMAI.md
+++ b/_projects/8. MidLLaMAI.md
@@ -3,6 +3,6 @@ name: MidLLaMAI
 type: github
 tools: [Quantization, Pruning, LLM, Benchmarking, GPTQ, AWQ]
 image:
-description: A benchmarking suite for evaluating the performance of compressed LLaMA models focused on finding an optimal balance between different pruning and quantization techniques with varying number of model parameters.
+description: Benchmarking suite for evaluating performance of compressed Hugging Face LLaMA models, focused on finding an optimal balance between different pruning and quantization techniques with varying number of LLM model parameters
 external_url: https://github.com/GokulVSD/MidLLaMAI
 ---
