Update certificates to awards, include patent in resume

--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -109,7 +109,7 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Gokul Vasudeva} \\ \vspace{1pt}
-    \small 623-888-9818 $|$ \href{mailto:gokul.vasde@gmail.com}{\underline{gokul.vasde@gmail.com}} $|$ 
+    \small 623-888-9818 $|$ \href{mailto:gokul.vasde@gmail.com}{\underline{gokul.vasde@gmail.com}} $|$
     \href{https://linkedin.com/in/gokulvsd}{\underline{linkedin.com/in/gokulvsd}} $|$
     \href{https://gokulvsd.github.io}{\underline{gokulvsd.github.io}}
 \end{center}
@@ -120,7 +120,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Arizona State University}{Tempe, AZ}
-      {Master of Science in Computer Science}{Aug. 2023 -- May 2025}
+      {Master of Science in Computer Science | GPA: 4.0}{Aug. 2023 -- May 2025}
   \resumeSubHeadingListEnd
 
 
@@ -140,13 +140,13 @@
 
     \resumeSubheading
       {ThoughtSpot}{Bangalore, KA}
-      {Member of Technical Staff 4}{Feb 2023 -- Jul. 2023}
+      {Member of Technical Staff 4}{Feb. 2023 -- Jul. 2023}
     \resumeItemListStart
         \resumeItem{SpotIQ is ThoughtSpot's AI engine, where I built and scaled ML based insight generation, progressing from junior IC to leading technical decision making, driving efforts to re-architect the product with 300+ PRs by the end of my tenure}
         \resumeItem{Working with React, GraphQL, Java, C++, Python, Go, EC2, RDS and Postgres, I expanded Cortex, our in-house Machine Learning engine, to support multi-tenancy, designed the data caching layer, data transport and all major APIs}
         \resumeItem{Built key driver analysis for changes in user metrics, and drastically reduced tech debt, improving team-wide productivity}
     \resumeItemListEnd
-   
+
     \resumeSubSubheading
       {Member of Technical Staff 3}{Aug. 2022 -- Jan. 2023}
     \resumeItemListStart
@@ -186,7 +186,7 @@
 \section{Publications \& Awards}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Mine actionable insights on key metrics from freshly ingested data} $|$ \emph{US Patent and Trademark Office}}{May 2022}
+          {\textbf{Insight Mining Using Machine Learning} $|$ \emph{Patent No. US-20240046144-A1} $|$ \emph{US Patent \& Trademark Office}}{Feb. 2024}
           \resumeItemListStart
             \resumeItem{Co-invented Cortex, a novel paradigm for anomaly detection through time-series forecast deviations and AutoML}
           \resumeItemListEnd
@@ -197,7 +197,7 @@
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-    
+
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
