--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -109,7 +109,7 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Gokul Vasudeva} \\ \vspace{1pt}
-    \small 623-888-9818 $|$ \href{mailto:gokul.vasde@gmail.com}{\underline{gokul.vasde@gmail.com}} $|$
+    \small 623-888-9818 $|$ \href{mailto:gokulvsd@icloud.com}{\underline{gokulvsd@icloud.com}} $|$
     \href{https://linkedin.com/in/gokulvsd}{\underline{linkedin.com/in/gokulvsd}} $|$
     \href{https://gokulvsd.github.io}{\underline{gokulvsd.github.io}}
 \end{center}
