Website cleanup, new image

--- a/_projects/1. Crypticket.md
+++ b/_projects/1. Crypticket.md
@@ -2,7 +2,7 @@
 name: Crypticket
 type: github
 tools: [React, PWA, Cryptography, CSS, JavaScript, jQuery, Bootstrap, Responsive Design, Local Storage API, Browser Caching, ReactToolTips, EdDSA, Offline Capable, Elliptic]
-image: /assets/crypticket.jpg
+image: /assets/projects/crypticket.jpg
 description: An offline capable cryptographic ticket generation and authentication platform using service workers and local storage caching. Built as a responsive PWA from scratch using React, utilizing EdDSA elliptic curve cryptography
 external_url: https://gokulvsd.github.io/Crypticket
 ---
