--- a/_projects/2. MonoDAC.md
+++ b/_projects/2. MonoDAC.md
@@ -2,7 +2,7 @@
 name: MonoDAC
 type: github
 tools: [Deep Learning, Computer Vision, Depth Estimation, DeepLabv3+, 3D Point Cloud, IPcamera]
-image: /assets/monodac.jpg
+image: /assets/projects/monodac.jpg
 description: Monocular depth estimation built with OpenCV and TensorFlow using an encoder-decoder, employing Atrous Convolutions and ASPP, along with a web UI for real-time wireless image capture, depth inference and 3D point clouds
 external_url: https://www.github.com/GokulVSD/monodac
 ---
