Minor resume update

--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -132,8 +132,8 @@
       {Apple Inc.}{Cupertino, CA}
       {Software Engineer Intern}{May 2024 -- Aug. 2024}
     \resumeItemListStart
-        \resumeItem{Built a production-ready GenAI platform with React and FastAPI, leveraging Apple's JAX foundation models for App Store search ads alerting, attribution and anomaly detection by orchestrating resources on AWS with OAuth and RBAC}
-        \resumeItem{Developed a chatbot with an elegant modular knowledge recall framework using Retrieval Augmented Generation (RAG)}
+        \resumeItem{Built a production-ready Generative AI platform complete with OAuth and RBAC, leveraging FastAPI and Apple's JAX models for App Store search ads alerting, anomaly detection and attribution by orchestrating various AWS resources}
+        \resumeItem{Developed an agentic chatbot incorporating RAG, batching, chunking and an elegant modular knowledge recall framework}
         \resumeItem{Set up pipelines for Docker, knowledge generation and CI/CD using Jenkins and Spinnaker for deployments to EKS}
     \resumeItemListEnd
 
@@ -142,8 +142,8 @@
       {ThoughtSpot}{Bangalore, KA}
       {Member of Technical Staff 4}{Feb. 2023 -- Jul. 2023}
     \resumeItemListStart
-        \resumeItem{SpotIQ is ThoughtSpot's AI engine, where I built and scaled ML based insight generation, progressing from junior IC to leading technical decision making, driving efforts to re-architect the product with 300+ PRs by the end of my tenure}
-        \resumeItem{Working with React, GraphQL, Java, C++, Python, Go, EC2, RDS and Postgres, I expanded Cortex, our in-house Machine Learning engine, to support multi-tenancy, designed the data caching layer, data transport and all major APIs}
+        \resumeItem{SpotIQ is ThoughtSpot's AI engine, where I built and scaled ML based insight generation, progressing from junior to senior IC with over 300+ PRs in under 2 years, driving efforts to re-architect the core product}
+        \resumeItem{Working cross-functionally with React, GraphQL, Java, C++, Python, Go, EC2, RDS and Postgres, I expanded Cortex, our in-house Machine Learning engine, to support multi-tenancy, designed the data caching layer and all major APIs}
         \resumeItem{Built key driver analysis for changes in user metrics, and drastically reduced tech debt, improving team-wide productivity}
     \resumeItemListEnd
 
