--- a/assets/resume.tex
+++ b/assets/resume.tex
@@ -119,8 +119,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Master of Science in Computer Science \textnormal{\textit{| GPA: 4.0}}}{Aug. 2023 -- May 2025}
       {Arizona State University}{Tempe, AZ}
-      {Master of Science in Computer Science | GPA: 4.0}{Aug. 2023 -- May 2025}
   \resumeSubHeadingListEnd
 
 
@@ -128,12 +128,18 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
-    \resumeSubheading
-      {Apple Inc.}{Cupertino, CA}
+      \resumeSubheading
+      {Apple Inc.}{Cupertino, CA | Austin, TX}
+      {Software Engineer ICT3}{Jul. 2025 -- Present}
+    \resumeItemListStart
+        \resumeItem{Working on Generative and Agentic AI to power dynamic analytics, alerting and auto triaging within Apple Ads}
+        \resumeItem{Responsibilities include fine-tuning Apple's JAX foundation models along with incorporating MCP, RAG, batching, chunking, guided generation, knowledge recall and stateful memory context}
+    \resumeItemListEnd
+
+    \resumeSubSubheading
       {Software Engineer Intern}{May 2024 -- Aug. 2024}
     \resumeItemListStart
-        \resumeItem{Built a production-ready Generative AI platform complete with OAuth and RBAC, leveraging FastAPI and Apple's JAX models for App Store search ads alerting, anomaly detection and attribution by orchestrating various AWS resources}
-        \resumeItem{Developed an agentic chatbot incorporating RAG, batching, chunking and an elegant modular knowledge recall framework}
+        \resumeItem{Built a prod-ready Gen AI platform with FastAPI including OAuth and RBAC for ads anomaly detection and attribution}
         \resumeItem{Set up pipelines for Docker, knowledge generation and CI/CD using Jenkins and Spinnaker for deployments to EKS}
     \resumeItemListEnd
 
